# jewelry-ticketing-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
app/: __init__.py  config.py  main.py
app/api/v1/: __init__.py  items.py  tickets.py  users.py
app/db/: __init__.py  database.py  models.py
app/schemas/: __init__.py  item.py  ticket.py  user.py
app/services/: __init__.py  priority_service.py  ticket_service.py
app/utils/: __init__.py  enums.py
